save before load master

--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-file was updated with new data
+file was updated with some data;
+add some data. it will be commited now;
+bla bla bla. End of file.
